# telnyx-onset

./: .env.example  .gitignore  DISCOVERY.md  README.md  pyproject.toml
docs/: streaming-tts-decode-plan.md  streaming-tts-handoff.md
onset/: __init__.py  __main__.py  agent.py  audio.py  barge_in.py  conversation.py  limits.py  logging.py  media.py  ports.py  prompts.py  retry.py  server.py  settings.py  stt.py  telnyx.py  tools.py  transport.py  tts.py  turn_manager.py  types.py  vad.py
scripts/: probe.py  validate_streaming_decode.py
tests/: conftest.py  test_agent.py  test_audio.py  test_media.py  test_server.py  test_stt.py  test_telnyx.py  test_tools.py  test_tts.py  test_turn_manager.py
