[project]
name = "telnyx-onset"
version = "0.1.0"
description = "Real-time Telnyx media-stream voice agent: one control plane, frame-level barge-in"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
    "openai>=1.60",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "pynacl>=1.5",
    "websockets>=14",
    "webrtcvad-wheels>=2.0.14",
    "miniaudio>=1.59",
]

[project.scripts]
onset = "onset.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["onset"]

[tool.ruff]
target-version = "py312"
# scripts/probe.py is a one-off live diagnostic (build step 0), not product code.
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TC"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["webrtcvad", "miniaudio"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
